# dcspanel

./: Cargo.toml  Readme.md
panel/: Cargo.toml  Readme.md  build.rs  panel.rc
panel/rc/: Readme.md
panel/src/: lib.rs  main.rs  tray.rs  web.rs
rsbios/: Cargo.toml  Readme.md
rsbios/src/: lib.rs  main.rs
src/: main.rs
